# tmux-organizer

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs  model.rs  tmux.rs  ui.rs
